--- a/src/app/exercice1/exercice1.component.html
+++ b/src/app/exercice1/exercice1.component.html
@@ -2,7 +2,8 @@
 <br/>
 <br/>
 <h3>Exercice 1 : mise en place de Output et Input </h3>
-<app-exercice1-enfant></app-exercice1-enfant>
+<!-- création des liens Input et Output avec le composant enfant -->
+<app-exercice1-enfant [resultat]="result" (modifCompteur)="majCompteur($event)"></app-exercice1-enfant>
 <br/>
 <span> compteur : {{ result }}</span>
 <hr>
